Implement distributed searching with gRPC

--- a/search-server/src/main/resources/application.conf
+++ b/search-server/src/main/resources/application.conf
@@ -4,11 +4,26 @@ http-server {
   response-timeout = 60
 }
 
-file-repository {
+search-file-repository {
   root-path = "search-server/src/main/resources/files"
 }
 
-search {
+par-search-file-repository {
+  root-path = "search-server/src/main/resources/files"
+}
+
+par-search {
   parallelism = 16
   phrase-chunk-size = 1024
 }
+
+search-grpc-servers = [
+  {
+    host = "localhost",
+    port = 9999
+  },
+  {
+    host = "localhost",
+    port = 9998
+  }
+]
