--- a/search-server/src/main/resources/application.conf
+++ b/search-server/src/main/resources/application.conf
@@ -1,20 +1,26 @@
 http-server {
   host = "localhost"
+  host = ${?HTTP_SERVER_HOST}
   port = 8080
+  port = ${?HTTP_SERVER_PORT}
   response-timeout = 60
 }
 
 search-file-repository {
   root-path = "search-server/src/main/resources/files"
+  root-path = ${?ROOT_PATH}
 }
 
 par-search-file-repository {
   root-path = "search-server/src/main/resources/files"
+  root-path = ${?ROOT_PATH}
 }
 
 par-search {
   parallelism = 16
+  parallelism = ${?PARALLELISM}
   phrase-chunk-size = 1024
+  phrase-chunk-size = ${?PHRASE_CHUNK_SIZE}
 }
 
 search-grpc-servers = [
@@ -27,3 +33,4 @@ search-grpc-servers = [
     port = 9998
   }
 ]
+search-grpc-servers = ${?SEARCH_GRPC_SERVERS}
